# samrs

./: .gitignore  Cargo.toml  README.md
samrs/: Cargo.toml
samrs-cli/: Cargo.toml
samrs-cli/src/: applist.rs  main.rs
samrs/src/: applist.rs  lib.rs  utils.rs
