[package]
name = "samrs-cli"
version = "0.1.0"
authors = [ "Jonni Liljamo <jonni@liljamo.com>" ]
edition = "2021"
repository = "https://github.com/QuendirSkye/samrs"
license = "GPL-3.0"

[dependencies]
samrs = { path = "../samrs" }

serde_json = "1.0.94"

tokio = { version = "1.26.0", features = [ "full" ] }
poll-promise = { version = "0.2.0", features = [ "tokio" ] }

console = "0.15.5"
indicatif = "0.17.3"

[dependencies.clap]
version = "4.1.8"
default-features = false
features = [ "cargo", "color", "derive", "error-context", "help", "suggestions", "std", "usage", "unicode", "wrap_help" ]
