[package]
name = "samrs"
version = "0.1.0"
authors = [ "Jonni Liljamo <jonni@liljamo.com>" ]
edition = "2021"
repository = "https://github.com/QuendirSkye/samrs"
license = "GPL-3.0"

[dependencies]
steamworks = "0.9.0"

async-std = "1.12.0"

[dependencies.reqwest]
version = ">=0.11, <0.12"
default-features = false
features = [ "default-tls", "json", "stream" ]

[dependencies.serde]
version = ">=1.0, <2.0"
default-features = false
features = [ "derive" ]
