[package]
name = "samrs"
version = "0.1.0"
authors = [ "Jonni Liljamo <jonni@liljamo.com>" ]
edition = "2021"
repository = "https://github.com/QuendirSkye/samrs"
license = "GPL-3.0"

[dependencies]
steamworks = "0.9.0"

thiserror = "^1.0"
tokio = { version = "1.26.0", features = [ "full" ] }

[dependencies.reqwest]
version = ">=0.11, <0.12"
default-features = false
features = [ "default-tls", "json" ]

[dependencies.serde]
version = ">=1.0, <2.0"
default-features = false
features = [ "derive" ]
